milestone-portfolio-project/css/portfolio.css
/***** BASE STYLES *****/

body {
	font-family: 'Cormorant SC', serif;
	font-family: 'Cormorant', serif;
}

/***** GRID *****/

.full-width {
	width: 1366px;
}

.half-width {
	width: 683px;
	float: left;
}

.third-width {
	width: 455px;
	float: left;
}

quarter-width {
	width: 228px;
}

/***** HEADER *****/

#back-left {
	background: #000000;
	height: 877px;
	position: relative;
}

#back-right {
	back-left: #ffffff;
	height: 877px;
	float: left;
	position: relative;
}

#titlebar {
	background: #660606;
	clear: both;
	height: 266px;
	width:1246px;
	position: absolute;
	margin-left: 60px;
	margin-top: 30px;
	border-radius: 30px;
}

#widow {
	clear: both;
	margin: 76px 50px 96px 130px;
	padding: 0px;
}

#design {
	clear: both;
	margin: 63px 0px 0px -150px;
	padding: 0px;
}
	
#logo {
	clear: both;
	margin-left: 65px;
	margin-top: 33px;
	margin-right: 0px;
	padding: 0px;
}

#lower-half {
	position: fixed;
}

#menu {
	margin: 350px 20px 0px 50px;
	position: absolute;
}
	
#menu nav ul li a {
	font-family: 'Cormorant SC', serif;
	float: left;
	font-size: 48px;
	text-decoration: none;
	color: #ffffff;
	line-height: 200px;
}

#spider {
	clear: left;
	margin: 281px 0px 0px 840px;
}

/***** ABOUT *****/

#about {
	background: #660606;
	background-size: cover;
	height: 870px;
	position: relitive;
}

#home-route {
	margin: 30px 0px 10px 30px;
	border: solid 10px #000000;
	border-radius: 200px;
}

#meet-aubrie {
	background: #000000;
	bacground-size: cover;
	margin: 80px 18px;
	border-radius: 30px;
}

#about #navbar nav ul li a {
	font-family: 'Cormorant SC', serif;
	font-size: 26px;
	background: #000000;
	background-size: cover;
	color: #ffffff;
	border-radius: 10px;
	padding: 10px;
}

#about nav ul li {
	display: inline-block;
	margin-top: 70px;
}

#services {
	position: absolute;
	margin-top: 275px;
}

#help-menu {
	width: 395px;
	background: #000000;
	color: #ffffff;
	font-size: 19px;
	text-align: center;
	padding: 30px;
	margin: 0px 60px;
	border-radius: 30px;
}

#help-menu h3 {
	font-family: 'Cormorant', serif;
}

#bio-blurb {
	background: #000000;
	background-size: cover;
	color: #ffffff;
	width: 595px;
	margin-top: 0px;
	margin-left: 40px;
	border-radius: 30px;
	max-height: 450px;
}

#me {
	float: left;
	margin: 20px;
	padding: 20px;
}

#bio-blurb p {
	width: 235px;
	font-family: 'Cormorant', serif;
	padding: 5px;
	margin: 10px 40px 5px 5px;
	float: right;
	text-align: center;
	font-size: 18px;
	overflow: scroll;
	max-height: 410px;
}

/***** GALLERY *****/

#gallery {
	background: #000000;
	background-size: cover;
	height: 880px;
	position: relative;
}

#gallery #home-route {
	background: #ffffff;
	background-size: cover;
	border-radius: 200px;
}

#welcome {
	background: #ffffff;
	background-size: cover;
	margin: 80px 0px 80px -180px;
	border-radius: 30px;
}

#gallery #navbar nav ul li a {
	font-family: 'Cormorant SC', serif;
	font-size: 26px;
	background: #ffffff;
	background-size: cover;
	color: #660606;
	border-radius: 10px;
	padding: 10px;
}

#gallery nav ul li {
	display: inline-block;
	margin: 70px 0px 0px 0px;
}

#web-page, #mobile-page, #software-page {
	font-family: 'Cormorant SC', serif;
	color: #660606;
	margin-left: 200px;
	font-size: 48px;
	margin-top: 30px;
	text-align: center;
	position: absolute;
}

#web-page, #mobile-page, #software-page {
	background: #ffffff;
	background-size: cover;
	width: 225px;
	position: absolute;
	border-radius: 20px;
}
	
#gallery p {
	color: #660606;
	font-size: 28px;
	text-align: center;
	margin: 200px 10px 0px 160px;
	padding: 30px;
	line-height: 30px;
}

#p-web, #p-mobile, #p-software {
	background: #ffffff;
	background-size: cover;
	border-radius: 100%;
	border: solid 10px #660606;
	font-family: 'Cormorant', serif;
}

/***** WEB-GALLERY *****/

#web-gallery {
	background: #660606;
	background-size: cover;
	position: relative;
	height: 1200px;
}

#web-gallery #home-route {
	border: solid 10px #ffffff;
	border-radius: 200px;
}

#web-world {
	background: #ffffff;
	background-size: cover;
	border-radius: 10px;
	margin: 80px 60px 10px 0px;
}

#intro {
	background: #ffffff;
	background-size: cover;
	border-radius: 10px;
	clear: both;
	margin-left: 50px;
	font-size: 30px;
	text-align: center;
}

#jubilee {
	padding: 0px;
	margin: 0px -40px 0px 129px;
}

#nctc {
	padding: 0px;
	margin: 0px 10px 0px -30px;
}

#maeven {
	padding: 0px;
	margin: 0px 0px 0px -88px;
}

#lovely-rita {
	padding: 0px;
	margin: 50px 0px 20px 325px;
}

#stlouis-style {
	padding: 0px;
	margin: 50px 0px 20px -325px;
}

/***** MOBILE-GALLERY *****/

#mobile-gallery {
	background: #ffffff;
	background-size: cover;
	position: relative;
	height: 800px;
}

#mobile-gallery #home-route {
	border: solid 10px #660606;
	border-radius: 200px;
}

#mobile-world {
	background: #660606;
	background-size: cover;
	border-radius: 10px;
	padding: 10px;
	margin: 50px 0px 20px 30px;
}

#mobile-gallery h1 {
	background: #660606;
	background-size: cover; 
	border-radius: 10px;
	color: ffffff;
	text-align: center;
	padding: 10px;
	margin: 0px 0px 20px 50px;
	clear: both;
}

#mobile-gallery p {
	background: #660606;
	background-size: cover;
	border-radius: 10px;
	color: ffffff;
	font-size: 32px;
	text-align: center;
	padding: 0px;
	margin: 50px 0px 20px 50px;
}

/***** SOFTWARE-GALLERY *****/

#software-gallery {
	background: #000000;
	background-size: cover;
	position: relative;
	height: 800px;
}

#software-gallery #home-route {
	background: #ffffff;
	background-size: cover;
	border-radius: 200px;
	padding: 5px;
}

#software-world {
	background: #ffffff;
	background-size: cover;
	border-radius: 10px;
	padding: 10px;
	margin: 50px 0px 20px 30px;
}

#software-gallery h1 {
	background: #ffffff;
	background-size: cover; 
	border-radius: 10px;
	color: #000000;
	text-align: center;
	padding: 10px;
	margin: 0px 0px 20px 50px;
	clear: both;
}

#software-gallery p {
	background: #ffffff;
	background-size: cover;
	border-radius: 10px;
	color: #000000;
	font-size: 32px;
	text-align: center;
	padding: 0px;
	margin: 50px 0px 20px 50px;
}
	
/***** CONTACT *****/

#contact {
	background: #ffffff;
	background-size: cover;
	height: 820px;
	position: relative;
}

#contact #home-route {
	border: solid 10px #660606;
	border-radius: 200px;
	margin-right: 0px;
}

#contact nav ul li a {
	font-family: 'Cormorant SC', serif;
	font-size: 26px;
	background: #660606;
	background-size: cover;
	color: #ffffff;
	border-radius: 10px;
	padding: 10px;
}

#contact nav ul li {
	display: inline-block;
	margin-top: 70px;
}

#how {
	background: #660606;
	bacground-size: cover;
	margin: 80px 0px 10px -170px;
	position: relative;
	border-radius: 30px;
}

#contact h2 h3 {
	position: relative;
}

#message {
	background: #000000;
	background-size: cover;
	position: absolute;
	color: #ffffff;
	text-align: center;
	padding-top: 10px;
	border-radius: 10px;
	margin: 350px 410px;
	height: 325px;
	font-size: 30px;
	width: 600px;
}

#envelope {
	background: #000000;
	background-size: cover;
	color: #ffffff;
	font-size: 20px;
	margin: 260px 0px 0px -700px;
	border-radius: 10px;
	padding: 5px;
	clear: both;
}

